--- a/Kimono.csproj
+++ b/Kimono.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>kimono_icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
@@ -296,6 +299,7 @@
     <EmbeddedResource Include="MB_NumberXMLTemplate.txt" />
     <EmbeddedResource Include="MB_GraphXMLTemplate.txt" />
     <EmbeddedResource Include="MB_TextXMLTemplate.txt" />
+    <Content Include="kimono_icon.ico" />
     <Content Include="Resources\trashcan.png" />
     <EmbeddedResource Include="SQL_PortData_InsertUSERDATA.sql" />
     <EmbeddedResource Include="SQL_PortData_InsertINV.sql" />
